<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/it_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"
        android:icon="@drawable/round_home"
        />
    <item
        android:id="@+id/it_tasks"
        android:title="@string/tasks"
        android:icon="@drawable/round_task"
        />
    <item
        android:id="@+id/it_notes"
        android:title="@string/notes"
        app:showAsAction="ifRoom"
        android:icon="@drawable/round_note"
        />
    <item
        android:id="@+id/it_categories"
        android:title="@string/categories"
        app:showAsAction="ifRoom"
        android:icon="@drawable/round_category"
        />
</menu>