<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/green_style_new2"
    tools:context=".MainActivity">

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/textHello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="25dp"
        android:text="@string/title_hello"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textHello"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        android:text="@string/title_login"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="italic|bold" />

    <EditText
        android:id="@+id/etPersonName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/textLogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/custom_username_icon"
        android:gravity="start|center_vertical"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="#4D5051"
        android:textColorHint="#8A8E90"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/etPersonName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/custom_lock_icon"
        android:gravity="start|center_vertical"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColor="#4D5051"
        android:textColorHint="#8A8E90"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogIn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@+id/etPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/custom_button"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvTXTSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogIn"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:text="@string/txt_to_sign_up"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogIn"
        android:layout_toEndOf="@+id/tvTXTSignIn"
        android:layout_marginTop="9dp"
        android:padding="5dp"
        android:text="@string/click_to_sign_up"
        android:textColor="#0F5A53"
        android:textSize="17sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSignIn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/click_forgot_password"
        android:textAlignment="center"
        android:textColor="#023661"
        android:textSize="17sp"
        android:textStyle="bold|italic" />

</RelativeLayout>