<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/green_style_new2"
    tools:context=".PasswordActivity">

    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/ForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="25dp"
        android:text="@string/title_forgot_password"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/ForgotPassword"
        android:layout_marginStart="80dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="80dp"
        android:gravity="center"
        android:text="@string/enter_your_name"
        android:textColor="#4D5051"
        android:textSize="22sp"
        android:textStyle="bold|italic" />

    <EditText
        android:id="@+id/etUsername_reset"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/text"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/custom_username_icon"
        android:gravity="start|center_vertical"
        android:hint="@string/user_name"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:textColor="#4D5051"
        android:textColorHint="#8A8E90"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnReset"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/etUsername_reset"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:background="@drawable/custom_button"
        android:text="@string/btn_reset_password"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

</RelativeLayout>