<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="385dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/teal_700">

        <TextView
            android:id="@+id/txtSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="top|center"
            android:text="@string/title_search_by_category"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="45dp"
            android:gravity="center"
            android:padding="5sp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_TodoList"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/blue_shape"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/tag_todo_list"
                        android:textColor="#112833"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_WatchList"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/blue_shape"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/tag_watch_list"
                        android:textColor="#112833"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_HomeWork"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/blue_shape"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/tag_home_work"
                        android:textColor="#112833"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tv_Important"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/blue_shape"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/tag_important"
                        android:textColor="#112833"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_Shopping"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/green_shape"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/tag_shopping"
                        android:textColor="#112833"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_Personal"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/green_shape"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/tag_personal"
                        android:textColor="#112833"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_Meeting"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/green_shape"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/tag_meeting"
                        android:textColor="#112833"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_Medical"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/green_shape"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/tag_medical"
                        android:textColor="#112833"
                        android:textStyle="bold" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_Fitness"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/blue_shape"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/tag_fitness"
                        android:textColor="#112833"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_School"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/blue_shape"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/tag_school"
                        android:textColor="#112833"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_Music"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/blue_shape"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/tag_music"
                        android:textColor="#112833"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_Works"
                        android:layout_width="85dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/blue_shape"
                        android:paddingStart="10dp"
                        android:paddingTop="5dp"
                        android:paddingEnd="10dp"
                        android:paddingBottom="5dp"
                        android:text="@string/tag_works"
                        android:textColor="#112833"
                        android:textStyle="bold" />

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>